# oxengmm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: gtkmm-c14.txt
source/: icon.cc  main.cc  mainwindow.cc  mainwindow.h
tests/: CMakeLists.txt  successtest.cc
